fixed course names

--- a/Proposal/uu_cern_thesis_proposal.tex
+++ b/Proposal/uu_cern_thesis_proposal.tex
@@ -126,7 +126,7 @@
 			{High Performance Programming}	
 		
 		\item \href{http://www.uu.se/en/admissions/master/selma/kursplan/?kpid=31898&type=1}
-			{Parallel and Distributed Computing}
+			{Parallel and Distributed Programming}
 	\end{itemize}
 
 
